# stampli

./: .env.example  .gitignore  README.md  analysis.ipynb  eda.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: fetch_artifacts.ps1
src/: analysis_tool.py  app_frontend.py  build_index.py  cluster_and_label.py  clustering_reviews.py  embed_reviews.py  label_clusters_llm.py  orchestrator.py  qa_server.py  query_parser.py  retrieval.py  sample_cluster_reps.py  synthesis.py
